creacion de index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <title>Page title</title>
   </head>
   <body>
-    <img src="images/company-logo.png" alt="Company">
+    <img src="WebStudio" alt="WebStudio">
     <h1 class="hello-world">Hello, world!</h1>
+
+    <footer>
+      WebStudio
+    Calz. Ticomán 500, Ciudad de México, CDMX, México
+    info@example.com
+    +52 55 5529 6000 
+    </footer>
+    
   </body>
+  
 </html>
