--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <title>Page title</title>
-  </head>
+  
+    <meta>
+    <meta>
+  <title></title>
+</head>
   <body>
     <img src="WebStudio" alt="WebStudio">
     <h1 class="hello-world">Hello, world!</h1>
