--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Page title</title>
-  
-    <meta>
-    <meta>
-  <title></title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>WebStudio</title>
 </head>
   <body>
-    <img src="WebStudio" alt="WebStudio">
-    <h1 class="hello-world">Hello, world!</h1>
-
-    <footer>
-      WebStudio
-    Calz. Ticomán 500, Ciudad de México, CDMX, México
-    info@example.com
-    +52 55 5529 6000 
-    </footer>
-    
+    <header> 
+        <nav> 
+          <ul>
+            <li><img src=""></li>
+            <li><a href="#">Estudio</a></li>
+            <li><a href="#">Portafolio</a></li>
+            <li><a href="#">Contactos</a></li>
+          </ul>
+        </nav>
+    </header>
+    <section>
+      <div id="banner"> 
+        <h1 SOLUCIONES EFICACES PARA SUU NEGOCIO></h1>
+      </div>
+    </section>    
   </body>
-  
 </html>
