--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <section>
       <div id="banner"> 
-        <h1 SOLUCIONES EFICACES PARA SUU NEGOCIO></h1>
+        <h1>SOLUCIONES EFICACES PARA SUU NEGOCIO</h1>
       </div>
     </section>    
   </body>
