--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>WebStudio</title>
 </head>
-  <body>
+<body>
     <header> 
         <nav> 
           <ul>
@@ -18,8 +18,8 @@
     </header>
     <section>
       <div id="banner"> 
-        <h1>SOLUCIONES EFICACES PARA SUU NEGOCIO</h1>
+        <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
       </div>
     </section>    
-  </body>
+</body>
 </html>
