--- a/index.html
+++ b/index.html
@@ -16,10 +16,81 @@
           </ul>
         </nav>
     </header>
+    <main> 
     <section>
-      <div id="banner"> 
+      <div id="encabezado"> 
         <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
       </div>
-    </section>    
+    </section>
+    <section> 
+      <table>            
+        <thead>
+          <th>
+              Número
+          </th>
+          <th>ABC</th>
+          <th>abc</th>
+       </thead>
+      <tbody>
+          <tr> 
+              <td>123</td>
+              <td>ABC</td>
+              <td>jkl</td>
+          </tr>
+          <tr> 
+              <td>456</td>
+              <td>DEF</td>
+              <td>ghi</td>
+          </tr>
+          <tr> 
+              <td>789 </td>
+              <td>GHI</td>
+              <td>def</td>
+          </tr>
+          <tr> 
+              <td>000 </td>
+              <td>JKL</td>
+              <td>abc</td>
+          </tr>
+        </tbody>
+      </table>
+                          
+      <table> 
+        <thead>
+              <tr>
+                  <th></th>
+                  <th>ABC</th>
+                  <th></th>
+                  <th></th>
+              </tr>
+              <tr>
+                  <th></th>
+                  <th></th>
+                  <th>Número1</th>
+                  <th>Número2</th>
+              </tr>
+          </thead>
+
+          <tr> 
+              <td>123</td>
+              <td>ABC</td>
+              <td>jkl</td>
+          </tr>
+          <tr> 
+              <td>789 </td>
+              <td>GHI</td>
+              <td>def</td>
+          </tr>
+          <tr> 
+              <td>000 </td>
+              <td>JKL</td>
+              <td>abc</td>
+          </tr>
+      </table>
+  </section>
+</main>
+<footer> 
+  
+</footer>
 </body>
 </html>
