--- a/index.html
+++ b/index.html
@@ -1,96 +1,147 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>WebStudio</title>
-</head>
-<body>
-    <header> 
-        <nav> 
-          <ul>
-            <li><img src=""></li>
-            <li><a href="#">Estudio</a></li>
-            <li><a href="#">Portafolio</a></li>
-            <li><a href="#">Contactos</a></li>
-          </ul>
-        </nav>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>WebStudio</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="#">WebStudio</a>
+        <a href="#">Estudio</a>
+        <a href="#">Portafolio</a>
+        <a href="#">Contactos</a>
+      </nav>
+      <a href="correoElectronico">info@devstudio.com</a>
+      <a href="telefono">+52 55 5529 6000</a>
     </header>
-    <main> 
-    <section>
-      <div id="encabezado"> 
+    <main>
+      <section>
         <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
-      </div>
-    </section>
-    <section> 
-      <table>            
-        <thead>
-          <th>
-              Número
-          </th>
-          <th>ABC</th>
-          <th>abc</th>
-       </thead>
-      <tbody>
-          <tr> 
-              <td>123</td>
-              <td>ABC</td>
-              <td>jkl</td>
-          </tr>
-          <tr> 
-              <td>456</td>
-              <td>DEF</td>
-              <td>ghi</td>
-          </tr>
-          <tr> 
-              <td>789 </td>
-              <td>GHI</td>
-              <td>def</td>
-          </tr>
-          <tr> 
-              <td>000 </td>
-              <td>JKL</td>
-              <td>abc</td>
-          </tr>
-        </tbody>
-      </table>
-                          
-      <table> 
-        <thead>
-              <tr>
-                  <th></th>
-                  <th>ABC</th>
-                  <th></th>
-                  <th></th>
-              </tr>
-              <tr>
-                  <th></th>
-                  <th></th>
-                  <th>Número1</th>
-                  <th>Número2</th>
-              </tr>
+        <br />
+        <input type="button" value="Solicite nuestro servicio" />
+      </section>
+      <section>
+        <table>
+          <thead>
+            <th>ATENCIÓN A LOS DETALLES</th>
+            <th>PUNTUALIDAD</th>
+            <th>PLANIFICACIÓN</th>
+            <th>TECNOLOGÍA MODERNA</th>
           </thead>
+          <tr>
+            <td>
+              Nos adentramos en todos los detalles y procesos de su negocio,
+              para así desarrollar una solución a su medida.
+            </td>
+            <td>
+              Con nosotros, usted puede sentirse seguro y protegido. Un
+              principio importante de la empresa: respetar su tiempo y respetar
+              los plazos acordados.
+            </td>
+            <td>
+              Usted podrá observar y participar en cada fase del desarrollo y
+              aplicación de soluciones.
+            </td>
+            <td>
+              Usamos herramientas innovadoras para resolver las tareas
+              asignadas. Es hora de simplificar los procesos laborales.
+            </td>
+          </tr>
+        </table>
+      </section>
+      <section>
+        <h2>A qué nos dedicamos</h2>
+      </section>
+      <section>
+        <img
+          src="images/imagencaja1.jpg"
+          alt="manos escribiendo en teclado, la pantalla muestra código de programación"
+          height="323"
+          width="373"
+        />
 
-          <tr> 
-              <td>123</td>
-              <td>ABC</td>
-              <td>jkl</td>
-          </tr>
-          <tr> 
-              <td>789 </td>
-              <td>GHI</td>
-              <td>def</td>
-          </tr>
-          <tr> 
-              <td>000 </td>
-              <td>JKL</td>
-              <td>abc</td>
-          </tr>
-      </table>
-  </section>
-</main>
-<footer> 
-  
-</footer>
-</body>
+        <img
+          src="images/imagencaja2.jpg"
+          alt="persona usando celular y computadora"
+          height="323"
+          width="373"
+        />
+        <img
+          src="images/imagencaja3.jpg"
+          alt="manos sosteniendo un ipad, la pantalla del ipad muestra gama de colores"
+          height="323"
+          width="373"
+        />
+      </section>
+      <section>
+        <h2>Nuestro Equipo</h2>
+      </section>
+      <section>
+        <table>
+          <thead>
+            <th>
+              <img
+                src="images/imagentarjeta1.jpg"
+                alt="Hombre castaño, usa lentes redondos y camisa café debotones blancos, está sonriendo"
+                height="270"
+                width="260"
+              />
+            </th>
+            <th>
+              <img
+                src="images/imagentarjeta2.jpg"
+                alt="Mujer sonriente, rubia de cabello peinado d lado, usa lentes cuadrados, chaqueta negra y blusa blanca"
+                height="270"
+                width="260"
+              />
+            </th>
+            <th>
+              <img
+                src="images/imagentarjeta3.jpg"
+                alt="Hombre sonriendo, rubio, de barba corta, usa camisa celeste"
+                height="270"
+                width="260"
+              />
+            </th>
+            <th>
+              <img
+                src="images/imagentarjeta4.jpg"
+                alt="Hombre sonriendo, de cabello negro, usa gafas de marco negro y camiseta neggra"
+                height="270"
+                width="260"
+              />
+            </th>
+          </thead>
+          <tbody>
+            <td>
+              <h3>Andrés Cubo</h3>
+              <p>Diseñador de Productos</p>
+            </td>
+            <td>
+              <h3>Carla Palacios</h3>
+              <p>Desarrolladora Frontend</p>
+            </td>
+            <td>
+              <h3>Mario Dorado</h3>
+              <p>Marketing</p>
+            </td>
+            <td>
+              <h3>Pablo Mijangos</h3>
+              <p>Diseñador IU</p>
+            </td>
+          </tbody>
+        </table>
+      </section>
+    </main>
+    <footer>
+      <address>
+        WebStudio Calz. Ticomán 500, Ciudad de México, CDMX, México
+        <br />
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+525555296000">+52 55 5529 6000</a>
+      </address>
+    </footer>
+  </body>
 </html>
