--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
     </main>
     <footer>
       <address>
-        WebStudio Calz. Ticomán 500, Ciudad de México, CDMX, México
+        <p>WebStudio</p>
+        Calz. Ticomán 500, Ciudad de México, CDMX, México
         <br />
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+525555296000">+52 55 5529 6000</a>
