--- a/index.html
+++ b/index.html
@@ -8,142 +8,138 @@
   <body>
     <header>
       <nav>
-        <a href="#">WebStudio</a>
-        <a href="#">Estudio</a>
-        <a href="#">Portafolio</a>
-        <a href="#">Contactos</a>
+        <ul>
+          <li><a href="#">WebStudio</a></li>
+          <li><a href="#">Estudio</a></li>
+          <li><a href="#">Portafolio</a></li>
+          <li><a href="#">Contactos</a></li>
+        </ul>
       </nav>
       <a href="correoElectronico">info@devstudio.com</a>
       <a href="telefono">+52 55 5529 6000</a>
     </header>
     <main>
       <section>
-        <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
-        <br />
-        <input type="button" value="Solicite nuestro servicio" />
+        <div id="encabezado">
+          <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
+          <br />
+          <input type="button" value="Solicite nuestro servicio" />
+        </div>
       </section>
       <section>
-        <table>
-          <thead>
-            <th>ATENCIÓN A LOS DETALLES</th>
-            <th>PUNTUALIDAD</th>
-            <th>PLANIFICACIÓN</th>
-            <th>TECNOLOGÍA MODERNA</th>
-          </thead>
-          <tr>
-            <td>
-              Nos adentramos en todos los detalles y procesos de su negocio,
-              para así desarrollar una solución a su medida.
-            </td>
-            <td>
-              Con nosotros, usted puede sentirse seguro y protegido. Un
-              principio importante de la empresa: respetar su tiempo y respetar
-              los plazos acordados.
-            </td>
-            <td>
-              Usted podrá observar y participar en cada fase del desarrollo y
-              aplicación de soluciones.
-            </td>
-            <td>
-              Usamos herramientas innovadoras para resolver las tareas
-              asignadas. Es hora de simplificar los procesos laborales.
-            </td>
-          </tr>
-        </table>
-      </section>
-      <section>
-        <h2>A qué nos dedicamos</h2>
-      </section>
-      <section>
-        <img
-          src="images/imagencaja1.jpg"
-          alt="manos escribiendo en teclado, la pantalla muestra código de programación"
-          height="323"
-          width="373"
-        />
+        <article>
+          <h3>ATENCIÓN A LOS DETALLES</h3>
+          <p>
+            Nos adentramos en todos los detalles y procesos de su negocio, para
+            así desarrollar una solución a su medida.
+          </p>
+        </article>
 
-        <img
-          src="images/imagencaja2.jpg"
-          alt="persona usando celular y computadora"
-          height="323"
-          width="373"
-        />
-        <img
-          src="images/imagencaja3.jpg"
-          alt="manos sosteniendo un ipad, la pantalla del ipad muestra gama de colores"
-          height="323"
-          width="373"
-        />
+        <article>
+          <h3>PUNTUALIDAD</h3>
+          <p>
+            Con nosotros, usted puede sentirse seguro y protegido. Un principio
+            importante de la empresa: respetar su tiempo y respetar los plazos
+            acordados.
+          </p>
+        </article>
+
+        <article>
+          <h3>PLANIFICACIÓN</h3>
+          <p>
+            Usted podrá observar y participar en cada fase del desarrollo y
+            aplicación de soluciones.
+          </p>
+        </article>
+
+        <article>
+          <h3>TECNOLOGÍA MODERNA</h3>
+          <p>
+            Usamos herramientas innovadoras para resolver las tareas asignadas.
+            Es hora de simplificar los procesos laborales.
+          </p>
+        </article>
+      </section>
+
+      <section>
+        <div>
+          <h2>A qué nos dedicamos</h2>
+        </div>
+        <div>
+          <img
+            src="images/imagencaja1.jpg"
+            alt="manos escribiendo en teclado, la pantalla muestra código de programación"
+            height="323"
+            width="373"
+          />
+          <img
+            src="images/imagencaja2.jpg"
+            alt="persona usando celular y computadora"
+            height="323"
+            width="373"
+          />
+          <img
+            src="images/imagencaja3.jpg"
+            alt="manos sosteniendo un ipad, la pantalla del ipad muestra gama de colores"
+            height="323"
+            width="373"
+          />
+        </div>
       </section>
       <section>
-        <h2>Nuestro Equipo</h2>
-      </section>
-      <section>
-        <table>
-          <thead>
-            <th>
-              <img
-                src="images/imagentarjeta1.jpg"
-                alt="Hombre castaño, usa lentes redondos y camisa café debotones blancos, está sonriendo"
-                height="270"
-                width="260"
-              />
-            </th>
-            <th>
-              <img
-                src="images/imagentarjeta2.jpg"
-                alt="Mujer sonriente, rubia de cabello peinado d lado, usa lentes cuadrados, chaqueta negra y blusa blanca"
-                height="270"
-                width="260"
-              />
-            </th>
-            <th>
-              <img
-                src="images/imagentarjeta3.jpg"
-                alt="Hombre sonriendo, rubio, de barba corta, usa camisa celeste"
-                height="270"
-                width="260"
-              />
-            </th>
-            <th>
-              <img
-                src="images/imagentarjeta4.jpg"
-                alt="Hombre sonriendo, de cabello negro, usa gafas de marco negro y camiseta neggra"
-                height="270"
-                width="260"
-              />
-            </th>
-          </thead>
-          <tbody>
-            <td>
-              <h3>Andrés Cubo</h3>
-              <p>Diseñador de Productos</p>
-            </td>
-            <td>
-              <h3>Carla Palacios</h3>
-              <p>Desarrolladora Frontend</p>
-            </td>
-            <td>
-              <h3>Mario Dorado</h3>
-              <p>Marketing</p>
-            </td>
-            <td>
-              <h3>Pablo Mijangos</h3>
-              <p>Diseñador IU</p>
-            </td>
-          </tbody>
-        </table>
+        <div>
+          <h2>Nuestro Equipo</h2>
+        </div>
+        <div>
+          <img
+            src="images/imagentarjeta1.jpg"
+            alt="Hombre castaño, usa lentes redondos y camisa café debotones blancos, está sonriendo"
+            height="270"
+            width="260"
+          />
+          <h3>Andrés Cubo</h3>
+          <p>Diseñador de Productos</p>
+        </div>
+        <div>
+          <img
+            src="images/imagentarjeta2.jpg"
+            alt="Mujer sonriente, rubia de cabello peinado d lado, usa lentes cuadrados, chaqueta negra y blusa blanca"
+            height="270"
+            width="260"
+          />
+          <h3>Carla Palacios</h3>
+          <p>Desarrolladora Frontend</p>
+        </div>
+        <div>
+          <img
+            src="images/imagentarjeta3.jpg"
+            alt="Hombre sonriendo, rubio, de barba corta, usa camisa celeste"
+            height="270"
+            width="260"
+          />
+          <h3>Mario Dorado</h3>
+          <p>Marketing</p>
+        </div>
+        <div>
+          <img
+            src="images/imagentarjeta4.jpg"
+            alt="Hombre sonriendo, de cabello negro, usa gafas de marco negro y camiseta neggra"
+            height="270"
+            width="260"
+          />
+          <h3>Pablo Mijangos</h3>
+          <p>Diseñador IU</p>
+        </div>
       </section>
     </main>
     <footer>
       <address>
-        <p>WebStudio</p>
-        <p>
-          Calz. Ticomán 500, Ciudad de México, CDMX, México
-          <br />
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a href="tel:+525555296000">+52 55 5529 6000</a>
-        </p>
+        <ul>
+          <li><p>WebStudio</p></li>
+          <li>Calz. Ticomán 500, Ciudad de México, CDMX, México</li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
+        </ul>
       </address>
     </footer>
   </body>
